objects/Gong__Call_Invitee__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invitees</relationshipLabel>
        <relationshipName>Call_Invitees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Invitees</relationshipLabel>
        <relationshipName>Call_Invitees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Invitees</relationshipLabel>
        <relationshipName>Call_Invitees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Name__c</fullName>
        <formula>IF( ISBLANK( Gong__Contact_ID__c ) , 
IF( ISBLANK( Gong__Lead_Id__c ) , &quot;&quot; 
, Gong__Lead_Id__r.LastName &amp; &quot;, &quot; &amp; Gong__Lead_Id__r.FirstName ) 
, Gong__Contact_ID__r.LastName &amp; &quot;, &quot; &amp; Gong__Contact_ID__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <label>Invitee</label>
    <nameField>
        <label>Invitee Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invitees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>